# python-project-lvl2

./: .gitignore  Makefile  README.md  file1.yml  notes  pyproject.toml  setup.cfg
.github/: pytest.yml
.github/workflows/: linter_check copy.yml  linter_check.yml  pytest.yml  test.yml
gendiff/: __init__.py
gendiff/additionals/: additional_tools.py  checkers.py  replacers.py  result_generators.py
gendiff/dictionaries/: generator.py
gendiff/formater/: decoder.py  formater.py
gendiff/generate_diff/: gendiff.py
gendiff/parcer/: parcer.py
gendiff/scripts/: .gendiff.py.swp  decoder.py  gendiff.py  gendiff_script.py  parcer.py
tests/: test_gendiff.py  test_gendiff_json.py  test_gendiff_yml.py
tests/fixtures/: fixture_gendiff_test.txt
tests/fixtures/JSON/: file2_3.json
tests/fixtures/YML/: file1_2.yml  file1_3.yml  file2_3.yml
tests/fixtures/results/: fixture_gendiff_test.txt
