[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["DmitriyChebruchan"]
packages = [
  { include = "gendiff"}
]

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^7.1.1"
pytest-cov = "^3.0.0"
PyYAML = "^6.0"
packaging = "^21.3"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
pytest = "^7.1.1"

[build-system]
requires = ["poetry-core>=1.1.12"]
build-backend = "poetry.core.masonry.api"

